[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/interface/slot_containers/item_container_controller.gd" type="Script" id=1]
[ext_resource path="res://scenes/interactable/item/Item.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/interface/slot_containers/ItemSlotContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/icon.png" type="Texture" id=4]
[ext_resource path="res://assets/shadow.png" type="Texture" id=5]

[node name="ItemContainerController" type="Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]
item_scene = ExtResource( 2 )

[node name="Panel" type="Container" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="ItemList" parent="Panel" index="0" instance=ExtResource( 3 )]

[node name="DraggedItem_Sprite" type="Sprite" parent="Panel" index="1"]

visible = false
position = Vector2( 552.922, -134.28 )
z_index = 100
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="ItemMenu_WindowDialog" type="WindowDialog" parent="Panel" index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = -241.0
margin_right = 259.0
margin_bottom = -26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_icons/close_highlight = ExtResource( 5 )
custom_icons/close = ExtResource( 5 )
popup_exclusive = false
window_title = ""
resizable = false

[node name="ItemMenu_Icon" type="TextureRect" parent="Panel/ItemMenu_WindowDialog" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 8.0
margin_right = 245.0
margin_bottom = 72.0
rect_min_size = Vector2( 244, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Rect" ]

[node name="ItemMenu_Info" type="RichTextLabel" parent="Panel/ItemMenu_WindowDialog" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 93.0
margin_right = 229.0
margin_bottom = 198.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[connection signal="mouse_entered" from="." to="." method="_on_ItemContainerController_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_ItemContainerController_mouse_exited"]


